--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,14 @@ plugins {
 
 android {
     namespace 'sinthella.anpalagan.weatherapp'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "sinthella.anpalagan.weatherapp"
-        minSdk 21
-        targetSdk 32
+        minSdk 28
+        targetSdk 33
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -30,12 +29,16 @@ android {
 
 dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.android.volley:volley:1.1.1'
-    implementation 'com.google.android.gms:play-services-locaton:17.0.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.android.gms:play-services-location-license:12.0.1'
+    implementation "androidx.appcompat:appcompat:1.7.0-alpha01"
+
+
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
 }
